--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,6 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v4.2.0
         with: 
+          working-directory: ./web-api-auth-examples-master/authorization_code
           start: node app.js
+         
