--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,9 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.5.1
       - name: Checkout
         uses: actions/checkout@v2.5.0
-        with:
-          persist-credentials: false
       - name: Cypress.io
-        run: |
-          cd web-api-auth-examples-master/authorization_code 
-          node app.js
+        uses: cypress-io/github-action@v4.2.0
+        with: 
+          name: node app.js
