--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v4.2.0
         with: 
-          name: node app.js
+          start: node app.js
