--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.5.1
         with:
-          start: npm ci
+          start: npm install #dependencies
       - name: Cypress.io
         uses: cypress-io/github-action@v4.2.0
         with:
