--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.5.0
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.5.1
+        with:
+          start: npm install #dependencies
       - name: Cypress.io
         uses: cypress-io/github-action@v4.2.0
-        with: 
+        with:
           start: node app.js
