--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,6 @@ jobs:
       - name: Cypress.io
         uses: cypress-io/github-action@v4.2.0
         with:
+          env:  CYPRESS_spotify-password=${{ secrets.SPOTIFY_PASSWORD }} 
+                CYPRESS_spotify-username=${{ secrets.SPOTIFY_USERNAME }}
           start: node app.js
